@@ -12,6 +12,7 @@ requires "Params::Util";
 requires "Simple::Accessor";
 requires "Sub::Identify";
 requires "Net::CIDR";
+requires "IO::Prompt";
 
 # test
 on 'test' => sub {
